linux-update.yml
checking if the format is correct

--- a/linux-update.yml
+++ b/linux-update.yml
@@ -1,8 +1,26 @@
-become: true
-become_user: root
+---
+- name: Update and upgrade apt packages
+  hosts: all 
+  tasks:
+    - name: Update packages with apt
+      when: ansible_pkg_mgr == 'apt'
+      apt:
+        update_cache: yes
 
-- name: Update apt repo and cache on all Debian/Ubuntu boxes
-  apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+    - name: Update packages with yum
+      when: ansible_pkg_mgr == 'yum'
+      yum:
+        name: '*'
+        state: latest
 
-- name: Upgrade all packages on servers
-  apt: upgrade=dist force_apt_get=yes
+    - name: Upgrade packages with apt
+      when: ansible_pkg_mgr == 'apt'
+      apt:
+        upgrade: dist
+
+    - name: Upgrade packages with yum
+      when: ansible_pkg_mgr == 'yum'
+      yum:
+        name: '*'
+        state: latest
+        exclude: kernel*
